Changes: - Added "allow-plugins" option for typisttech/imposter-plugin - Added "config" and "extra" sections for imposter plugin configuration - Added "require" dependencies for typisttech/imposter-plugin and jms/serializer

--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,31 @@
 {
-    "name": "capimichi/wp-rest-headless-helper",
-    "autoload": {
-        "psr-4": {
-            "Capimichi\\WpRestHeadlessHelper\\": "src/"
-        }
-    },
-    "authors": [
-        {
-            "name": "Michele Capichioni",
-            "email": "capimichi@gmail.com"
-        }
-    ],
-    "require": {}
+  "name": "capimichi/wp-rest-headless-helper",
+  "autoload": {
+    "psr-4": {
+      "Capimichi\\WpRestHeadlessHelper\\": "src/"
+    }
+  },
+  "authors": [
+    {
+      "name": "Michele Capichioni",
+      "email": "capimichi@gmail.com"
+    }
+  ],
+  "config": {
+    "allow-plugins": {
+      "typisttech/imposter-plugin": true
+    }
+  },
+  "extra": {
+    "imposter": {
+      "namespace": "Capimichi\\WpRestHeadlessHelper\\Lib",
+      "excludes": [
+        "dummy/dummy-excluded"
+      ]
+    }
+  },
+  "require": {
+    "typisttech/imposter-plugin": "^0.6.2",
+    "jms/serializer": "^3.30"
+  }
 }
